--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
   <head>
+    <base href="/" />
     <meta charset="utf-8">
     <title>FountainJS</title>
     <meta name="description" content="">
@@ -11,6 +12,7 @@
     <!-- run `gulp inject` to automatically populate bower styles dependencies -->
     <!-- endbower -->
     <!-- endbuild -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
     <!-- build:css({.tmp,src}) styles/app.css -->
     <!-- inject:css -->
@@ -29,7 +31,7 @@
   <!-- run `gulp inject` to automatically populate bower script dependencies -->
   <!-- endbower -->
   <!-- endbuild -->
-
+  <script src="https://npmcdn.com/@angular/router@0.2.0/angular1/angular_1_router.js"></script>
   <!-- build:js({.tmp,src}) scripts/app.js -->
   <!-- inject:js -->
   <!-- js files will be automatically insert here -->
