Improve styling and UI

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,9 @@
 
 
   <body ng-app="app">
-    <app>Loading...</app>
+    <div ui-view layout-fill>
+      <app>Loading...</app>
+    </div>
   </body>
 
   <!-- build:js({.tmp,src}) scripts/vendor.js -->
